[package]
name = "cpu-bound"
version = "0.1.0"
edition = "2021"

[lib]
name = "tasks"
path = "src/lib.rs"

[[bin]]
name = "standard"
path = "src/main.rs"

[[bin]]
name = "tokio"
path = "src/tokio.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }
